@@ -1,3 +1,7 @@
+2003-02-10	fabian
+    * Cleaned up showCursor code
+    * Incorparated Japanese nib files from OHKAWA
+    
 2003-02-09	Ujwal S. Sathyam <ujwal@setlurgroup.com>
 
     * Added drag-and-drop support to the PTYTabView class. 
